Delete a product feature
