# routes/api.php
@@ -7,6 +7,7 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\Auth\ResetPasswordController;
 use App\Http\Controllers\Product\CreateProductController;
+use App\Http\Controllers\Product\DeleteProductController;
 use App\Http\Controllers\Product\FetchSingleProductController;
 use App\Http\Controllers\Product\UpdateProductController;
 use App\Http\Controllers\User\DeleteUserController;
@@ -45,5 +46,6 @@ Route::prefix('/v1/product')->name('product.')->group(function () {
         Route::post('/create', [CreateProductController::class, 'store'])->name('create');
         Route::put('/{uuid}', [UpdateProductController::class, 'update'])->name('update');
         Route::get('/{uuid}', [FetchSingleProductController::class, 'show'])->name('show');
+        Route::delete('/{uuid}', [DeleteProductController::class, 'delete'])->name('delete');
     });
 });
